# sonic-buildimage

./: slave.mk
dockers/docker-dummy-http/: Dockerfile.j2  docker_init.sh  dummy_http.conf  supervisord.conf
files/build_templates/: sonic_debian_extension.j2
files/build_templates/per_namespace/: dummy-http.service.j2
platform/vs/: kvm-image.mk  one-image.mk  raw-image.mk
platform/vs-custom/: README.gns3.md  README.vsdocker.md  README.vsvm.md  docker-dash-engine.dep  docker-dash-engine.mk  docker-gbsyncd-vs-custom.dep  docker-gbsyncd-vs-custom.mk  docker-ptf-sai.dep  docker-ptf.dep  docker-sonic-vs-custom.dep  docker-sonic-vs-custom.mk  docker-syncd-vs-custom.dep  docker-syncd-vs-custom.mk  kvm-image.mk  libsaithrift-dev.mk  one-image.mk  platform-modules-vs-custom.mk  raw-image.mk  rules.dep  rules.mk  sonic-gns3a.sh  sonic.xml  syncd-vs-custom.dep  syncd-vs-custom.mk  syncd-vs.mk
platform/vs-custom/sonic-platform-modules-vs-custom/debian/: changelog  control  rules
rules/: docker-dummy-http.dep  docker-dummy-http.mk  dummy-http-server.dep  dummy-http-server.mk  hello-sonic-pkg.dep  hello-sonic-pkg.mk  syncd.mk
src/dummy-http-server/: pyproject.toml  setup.cfg  setup.py
src/dummy-http-server/debian/: changelog  control  rules
src/dummy-http-server/dummy_http/: __main__.py
src/hello-sonic-pkg/: pyproject.toml  setup.cfg  setup.py
src/hello-sonic-pkg/debian/: changelog  control  rules
src/hello-sonic-pkg/hello_sonic_pkg/: __main__.py
src/p4lang/: Makefile
src/sonic-device-data/: Makefile
